syntax = "proto3";

package vn.all.grpcserver.proto;

option java_multiple_files = true;

// Định nghĩa service Greeter
service Greeter {
  // RPC method SayHello
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// Định nghĩa message cho request
message HelloRequest {
  string name = 1;
}

// Định nghĩa message cho response
message HelloReply {
  string message = 1;
}
